--- a/css/styles.css
+++ b/css/styles.css
@@ -55,7 +55,8 @@ nav{
 	background: white;
 	height: 50px; 
 	padding: 0 24px;
-	box-shadow: 0 1px 1px 1px black;
+	box-shadow: 1px 1px 50px rgb(231, 231, 231);
+	margin-bottom: 20px;
 }
 
 nav ul {
@@ -84,14 +85,14 @@ nav ul li svg {
 header {
 	display: grid;
 	height: 25vh;
-	grid-template-columns: 1fr 3fr 3fr 1fr;
+	grid-template-columns: 1fr 5fr 5fr 1fr;
 }
 
 
 .header-left {
 	height: 100%;
 	display: grid;
-	background: white;
+	background: rgba(0, 0, 0, 0);
 	grid-column: 2;
 }
 
@@ -104,7 +105,7 @@ header {
 
 .header-right {
 	height: 100%;
-	background: white;
+	background: rgba(0, 0, 0, 0);
 	grid-column: 3;
 	display: grid;
 	justify-content: center;
@@ -116,7 +117,7 @@ header {
 
 .hero {
 	display: grid;
-	grid-template-columns: 1fr 3fr 3fr 1fr;
+	grid-template-columns: 1fr 4fr 4fr 1fr;
 	grid-row: 377px 244px;
 	grid-gap: 10px;
 }
@@ -125,23 +126,71 @@ header {
 	display: grid;
 	grid-template-rows: 3fr 2fr;
 	grid-column: 2;
-	height: 100%;
 	grid-gap: 10px;
-	
+	height: 1px;
 }
 
 .left-top {
-	height: 100%;
-	background: blue;
+	height: 377px;
+	background: url(https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2021%2F05%2FTwitter-feat.jpg&signature=d4f719a628f83b439b6018c58aedff87) 0 0 no-repeat;
+	background-size: 100%;
+	overflow: hidden;
+	position: relative;
 }
 
 img {
 	width: 100%;
 	height: 100%;
 }
-.left-bottom {
+.overlay {
+	display: flex;
+	font-family: Arial;
+	flex-direction: column;
+	justify-content: flex-end;
+	background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.9));
 	height: 100%;
-	background: red;
+	width: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	color: white;
+	padding: 0 0 20px 20px;
+}
+
+.article-category {
+	font-size: 16px;
+}
+
+.article-title {
+	font-size: 36px;
+}
+.left-bottom {
+	background: url(https://s3.amazonaws.com/events.tnw/hardfork-2018/uploads/visuals/next_home-promo_tnw2021-1146x372.jpg) 0 0 no-repeat;
+	position: relative;
+	height: 248px;
+}
+
+.lb-title {
+	font-size: 24px;
+	font-family: 'Arial';
+	text-align: center;
+	margin: 20px 0;
+}
+
+.lb {
+	justify-content: center;
+}
+
+.learn-more {
+	width: 150px;
+	height: 50px;
+	background: none;
+	color: white;
+	border: 1px solid white;
+	border-radius: 30px;
+	font-size: 14px;
+	font-weight: bold;
+	align-self: center;
 }
 
 .hero > .right {
@@ -156,21 +205,32 @@ img {
 	grid-template-columns: 1fr 1fr;
 	grid-column: span 2;
 	grid-gap: 10px;
+	
+}
+
+.right-top .overlay p{
+	font-size: 20px;
+	font-weight: bold;
 }
 
 .right-top-left {
-	height: 100%;
-	background: yellow;
+	height: 249px;
+	position: relative;
+	background: url(https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2021%2F05%2FAI-robot-hed-e1622741896564.jpg&signature=edac3b70df4f7ccb94849949e0aa3f80) 0 0 no-repeat;
+
 }
 .right-top-right {
-	height: 100%;
-	background: purple;
+	height: 249px;
+	position: relative;
+	background: url(https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2021%2F06%2FNo-Left-Turn-hed.jpg&signature=796150ba58e5cc04a203acb324ac3aad) 0 0 no-repeat;
 }
 
 .right-bottom {
-	height: 100%;
-	background: lime;
+	height: 377px;
+	background: url(https://img-cdn.tnwcdn.com/image?fit=600%2C300&url=https%3A%2F%2Fcdn0.tnwcdn.com%2Fwp-content%2Fblogs.dir%2F1%2Ffiles%2F2020%2F06%2Fchinavsus.jpg&signature=762f9349bbc9c0fba27685d9f5473c30) 0 0 no-repeat;
+	background-size: 100%;
 	grid-column: span 2;
+	position: relative;
 }
 
 .popular-articles {
@@ -187,8 +247,6 @@ img {
 	width: 10%;
 	background: white;
 }
-
-
 
 .articles {
 	display: grid;
